#
# Copyright 2018, Data61
# Commonwealth Scientific and Industrial Research Organisation (CSIRO)
# ABN 41 687 119 230.
#
# This software may be distributed and modified according to the terms of
# the BSD 2-Clause license. Note that NO WARRANTY is provided.
# See "LICENSE_BSD2.txt" for details.
#
# @TAG(DATA61_BSD)
#

cmake_minimum_required(VERSION 3.8.2)

add_subdirectory(libs/camkes)
add_subdirectory(libs/device)

add_subdirectory(pkgs/consumes_event)
add_subdirectory(pkgs/dataport)
add_subdirectory(pkgs/emits_event)
add_subdirectory(pkgs/string_reverse)
